Fixup ui bug with stretched to top icon of tests skill.

--- a/ui/src/index.scss
+++ b/ui/src/index.scss
@@ -145,7 +145,8 @@ body {
     .avatar {
         border-radius: 100%;
         border: 2px black solid;
-        max-width: 50px;
+        width: 50px;
+        height: 50px;
     }
     display: flex;
     flex-direction: column;
